No DX Diag and DX12/Vulkan Info collection if --disable-gpu is in the command line

The unsandboxed GPU process to run DX Diagnostics and to collect DX12/Vulkan info should
not be launched if "--disable-gpu" is added to the command line switch.

Bug: 916338
Change-Id: Ib2551902f81e011e746436076b3d10c5848f5b37
Reviewed-on: https://chromium-review.googlesource.com/c/1394990
Commit-Queue: Maggie Chen <magchen@chromium.org>
Reviewed-by: Antoine Labour <piman@chromium.org>
Reviewed-by: Zhenyao Mo <zmo@chromium.org>
Cr-Commit-Position: refs/heads/master@{#619860}
Former-commit-id: 960c955a632962bdba625f8bb48a1c1a3ce48997